tests/baselines/reference/regexp-source-char-no-line-separator.errors.txt
regexp-source-char-no-line-separator.ts(27,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
regexp-source-char-no-line-separator.ts(27,2): error TS1161: Unterminated regular expression literal.
regexp-source-char-no-line-separator.ts(28,2): error TS1109: Expression expected.


==== regexp-source-char-no-line-separator.ts (3 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-RegularExpressionBackslashSequence
    info: |
      RegularExpressionBackslashSequence ::
        \ RegularExpressionNonTerminator
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
      LineTerminator ::
        <LF>
        <CR>
        <LS>
        <PS>
    
    description: >
      A regular expression may not contain a <LS> as a SourceCharacter
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /a\\ /
    ~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
    
    
!!! error TS1109: Expression expected.
    /*
    There is a <LS> between "a\\ " and "/"
    */
    